tests/semantic/fail/nil-6.tiger
let
	type a = array of int
	var b := a [0]
in
	b := nil
end
